--- a/akis_lab7_rudenko/src/components/CHeader.css
+++ b/akis_lab7_rudenko/src/components/CHeader.css
@@ -1,6 +1,6 @@
 .headerContainer {
     display: flex;
-    background-color: rgba(224, 213, 49, 88);
+    background-color: rgb(238, 231, 133);
 }
 
 .headerLogo {
